kubewebhook/bad-pod-name.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: apps
  labels:
    managedby: steve
spec:
  containers:
    - args:
        - sleep
        - "3600"
      image: busybox
      name: lifespan-offensive
  restartPolicy: Always
